==========
01/06/2009
==========

- bugfix c/ comportamento incorreto do controle de altura da area de queue
- marcacao de artigos do feed adicionados ao queue
- marcacao de entradas do queue para publicacao

HORAS TRABALHADAS: 6h