@@ -169,7 +169,7 @@ class A_WebService
         {
             $_m = "feed update post webservice failed";
             $_d = array ('method' => __METHOD__);
-            B_Log::write($_m, E_USER_ERROR, $_d);
+            B_Log::write($_m, E_ERROR, $_d);
         }
 
         return $updated;
@@ -191,21 +191,21 @@ class A_WebService
     {
         if($this->validate_args($args, array('id','published')) == false) return false;
 
-        $entry = BlogEntry::findByPrimaryKey($args['id']);
+        $entry = BlogEntry::getByPrimaryKey($args['id']);
         $published = ((boolean) $args['published']);
 
         try
         {
-            $entry->status_ = $published ? 
+            $entry->publication_status = $published ? 
                 BlogEntry::STATUS_PUBLISHED : 
                 BlogEntry::STATUS_FAILED;
-            $item->save();
+            $entry->save();
         }
         catch(B_Exception $_e)
         {
             $_m = "trying to set blog entry as published failed";
             $_d = array ('method' => __METHOD__);
-            B_Log::write($_m, E_USER_ERROR, $_d);
+            B_Log::write($_m, E_ERROR, $_d);
         }
         
         return true;
