@@ -117,10 +117,9 @@ class UserBlog extends B_Model
      */
     public static function getByPrimaryKey($id)
     {
-        return self::select(
-            "SELECT * FROM " . self::$table_name . 
+        return current(self::select("SELECT * FROM " . self::$table_name . 
             " WHERE " . self::$primary_key_name . " = ?", 
-            array($id), PDO::FETCH_CLASS, get_class());
+            array($id), PDO::FETCH_CLASS, get_class()));
     }
 
     // -------------------------------------------------------------------------
