@@ -7,3 +7,11 @@
 - marcacao de entradas do queue para publicacao
 
 HORAS TRABALHADAS: 6h
+
+==========
+02/06/2009
+==========
+
+- correcao dos scripts e backend; metodo de publicacao funcional
+
+HORAS TRABALHADAS: 4h
